--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "webpack": "webpack -w",
+    "webpack": "webpack",
     "start": "http-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
