--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@finsweet/attributes-cmscore": "^1.11.2",
     "@finsweet/attributes-cmsfilter": "^1.16.1",
     "@finsweet/cms-library": "^1.9.11",
+    "@leon/gradient-morph": "^1.2.3",
     "@studio-freight/lenis": "^0.2.28",
     "dat.gui": "^0.7.7",
     "esbuild": "0.17.11",
